@@ -1,25 +1,0 @@
-#!/usr/bin/make -f
-
-# Start build by executing:
-# $ debuild --no-tgz-check -us -uc
-
-# Uncomment this line out to make installation process more chatty.
-# Keep it on until we know there's no outstanding problems with installation.
-# export DH_VERBOSE=1
-
-# There's a bug here
-export DEB_BUILD_MAINT_OPTIONS=hardening=-format
-
-include /usr/share/dpkg/buildflags.mk
-
-
-%:
-	dh $@ --with=config-package
-
-override_dh_auto_build:
-	meson setup --reconfigure build && meson compile -C build
-
-override_dh_auto_install:
-
-override_dh_auto_test:
-
